# CG2026

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
assets/: model.mtl  model1.mtl
include/: Renderer.h  Types.h  Window.h
shaders/: frag.glsl  geom.frag  geom.tesc  geom.tese  geom.vert  light.frag  light.vert  shadow.vert  vert.glsl
src/: Mesh.cpp  Renderer.cpp  Window.cpp
